--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,1 @@
-DATABASE_URL=postgresql://postgres:Harish%409360461148@localhost:5432/crud_system
-
-NODE_ENV=development
-PORT=3000
-HOST=0.0.0.0
-LOG_LEVEL=info
-CORS_ORIGIN=http://localhost:3000,http://localhost:3001
+DATABASE_URL = postgres://postgres:Harish%409360461148@localhost:5432/crud_system
